samples/_failures_safe/1761597224_156c05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1dd4172.c: In function ‘main’:
./samples/SAFE/__tmp_d1dd4172.c:182:19: error: expected ‘)’ at end of input
  182 |         if (result
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_d1dd4172.c:182:9: error: expected declaration or statement at end of input
  182 |         if (result
      |         ^~
./samples/SAFE/__tmp_d1dd4172.c:182:9: error: expected declaration or statement at end of input
